--- a/index.html
+++ b/index.html
@@ -7,6 +7,136 @@
 </head>
 
 <body>
-    
+    <div class="container">
+
+        <header class="header">
+            <img src="" alt="" class="">
+            <div class="header__top">
+                <div class="logo">
+                    <a href="#" class="logo__link">
+                        <img src="" alt="coworking_logo" class="logo__img">
+                    </a>
+                </div>
+                <div class="contacts">
+                    <a href="tel: 88000039210" class="contacts__tel">8 (800) 00-392-10</a>
+                </div>
+                <div class="contacts__workhours">
+                    График работы
+                </div>
+            </div>
+        </header>
+
+        <main class="main-content">
+            <nav class="main-nav">
+                <ul class="main-nav__list">
+                    <li class="main-nav__item">
+                        Главная
+                    </li>
+                    <li class="main-nav__item">
+                        Отзывы
+                    </li>
+                    <li class="main-nav__item">
+                        Тарифы
+                    </li>
+                </ul>
+            </nav>
+
+            <div class="page-content">
+
+                <section class="features">
+                    <h2 class="section-title">Особенности</h2>
+                    <ul class="features__list">
+                        <li class="features__item">
+                            <h3 class="features__item-title">Уникальность</h3>
+                            <div class="features__item__description">
+                                <p class="features__item__description-text">
+                                    Создан для вашего комфортного отдыха
+                                </p>
+                                <ul class="features__item__description-list">
+                                    <li class="features__item__description-item">Кофе/чай</li>
+                                    <li class="features__item__description-item">Шкаф (5 кг)</li>
+                                    <li class="features__item__description-item">Рабочее место</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="features__item">
+                            <h3 class="features__item-title">Премиум-класс</h3>
+                            <div class="features__item__description">
+                                <p class="features__item__description-text">
+                                    Для любителей хороших впечатлений
+                                </p>
+                                <ul class="features__item__description-list">
+                                    <li class="features__item__description-item">Обед+кофе</li>
+                                    <li class="features__item__description-item">Шкаф (10 кг)</li>
+                                    <li class="features__item__description-item">Детское кресло</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="features__item">
+                            <h3 class="features__item-title">Лакшери-стулья</h3>
+                            <div class="features__item__description">
+                                <p class="features__item__description-text">
+                                    Всё самое лучшее и незабываемое
+                                </p>
+                                <ul class="features__item__description-list">
+                                    <li class="features__item__description-item">Джакузи</li>
+                                    <li class="features__item__description-item">Шкаф (15 кг)</li>
+                                    <li class="features__item__description-item">Табуретка</li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                </section>
+
+                <section class="news">
+                    <h2 class="section-title">Последние новости</h2>
+                    <ul class="news__list">
+                        <li class="news__item">
+                            <div class="news__avatar">
+                                <img src="" alt="" class="news__avatar-img">
+                            </div>
+                            <div class="news__content">
+                                <time class="news__date">12.10.2016</time>
+                                <h3 class="news__title">Чёрная дыра скидок!</h3>
+                                <p class="news__text">
+                                    Ключевым технологическим партнером GrowUp является дата-центр Миран, расположенный всего лишь в 500 метрах от здания, а значит, скорость интернета будет стабильной в любое время суток. Коворкинг работает в формате 24/7. Используйте шкаф для хранения личных вещей. 
+                                </p>
+                            </div>
+                        </li>
+                        <li class="news__item">
+                            <div class="news__avatar">
+                                <img src="" alt="" class="news__avatar-img">
+                            </div>
+                            <div class="news__content">
+                                <time class="news__date">01.02.2016</time>
+                                <h3 class="news__title">Заражай друзей, получай призы!</h3>
+                                <p class="news__text">
+                                    Быть частью сообщества сильных, грамотных и увлеченных своим делом профессионалов - вдохновляет выходить на новые уровни развития. Регулярно в коворкинге проводятся лекции, мастер-классы, встречи с инвесторами или менторами для резидентов.  
+                                </p>
+                            </div>
+                        </li>
+                        <li class="news__item">
+                            <div class="news__avatar">
+                                <img src="" alt="" class="news__avatar-img">
+                            </div>
+                            <div class="news__content">
+                                <time class="news__date">22.12.2015</time>
+                                <h3 class="news__title">Новое рабочее место для бизнесменов.</h3>
+                                <p class="news__text">
+                                    Для резидентов коворкинга оборудована не только рабочая зона, но и зона отдыха. Она включает в себя: кухонную зону и зону релакса. Каждый резидент может беспрепятственно пользоваться кухонным оборудованием: микроволновкой, чайником, кофе машиной, посудой. 
+                                </p>
+                            </div>
+                        </li>
+                    </ul>
+
+                </section>
+
+            </div>
+        </main>
+
+        <footer class="footer">
+
+        </footer>
+    </div>
 </body>
 </html>
