--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
         </header>
 
         <main class="main-content">
-            <nav class="main-nav">
-                <ul class="main-nav__list">
-                    <li class="main-nav__item">
-                        Главная
+            <nav class="sidebar-nav">
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Главная</a>
                     </li>
-                    <li class="main-nav__item">
-                        Отзывы
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Отзывы</a>
                     </li>
-                    <li class="main-nav__item">
-                        Тарифы
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Тарифы</a>
                     </li>
                 </ul>
             </nav>
@@ -128,14 +128,76 @@
                             </div>
                         </li>
                     </ul>
-
+                    <div class="pagination">
+                        <span class="pagination__display">Страница 1 из 7</span>
+                        <div class="pagination__controlls">
+                            <a href="#" class="pagination__left"><</a>
+                            <ul class="pagination__list">
+                                <li class="pagination__item">
+                                    <a href="#" class="pagination__link">1</a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a href="#" class="pagination__link">2</a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a href="#" class="pagination__link">3</a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a href="#" class="pagination__link">4</a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a href="#" class="pagination__link">5</a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a href="#" class="pagination__link">6</a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a href="#" class="pagination__link">7</a>
+                                </li>
+                            </ul>
+                            <a href="#" class="pagination__right">></a>
+                        </div>
+                    </div>
                 </section>
-
             </div>
         </main>
 
         <footer class="footer">
-
+            <p class="copyright">Сделано с любовью и старанием
+                на курсе «HTML + CSS» в 
+                <a class="copyright__link">LoftSchool</a>.
+                Автор работы: Прохладов Вадим
+            </p>
+            <div class="logo">
+                <a href="#" class="logo__link">
+                    <img src="" alt="coworking_logo" class="logo__img">
+                </a>
+            </div>
+            <div class="footer-socials">
+                <span class="socials_title">Наши социальные сети</span>
+                <ul class="socials__list">
+                    <li class="socials__item">
+                        <a href="#" class="social__link">
+                            <img src="#" alt="" class="social__img">VK
+                        </a>
+                    </li>
+                    <li class="socials__item">
+                        <a href="#" class="social__link">
+                            <img src="#" alt="" class="social__img">Facebook
+                        </a>
+                    </li>
+                    <li class="socials__item">
+                        <a href="#" class="social__link">
+                            <img src="#" alt="" class="social__img">Twitter
+                        </a>
+                    </li>
+                    <li class="socials__item">
+                        <a href="#" class="social__link">
+                            <img src="#" alt="" class="social__img">Mail
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </footer>
     </div>
 </body>
