--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 </div>
                 <div class="contacts">
                     <a href="tel: 88000039210" class="contacts__tel">8 (800) 00-392-10</a>
-                </div>
-                <div class="contacts__workhours">
-                    График работы
+                    <div class="contacts__workhours">
+                        График работы
+                    </div>
                 </div>
             </div>
         </header>
@@ -174,26 +174,26 @@
                 </a>
             </div>
             <div class="footer-socials">
-                <span class="socials_title">Наши социальные сети</span>
+                <span class="socials__title">Наши социальные сети</span>
                 <ul class="socials__list">
                     <li class="socials__item">
                         <a href="#" class="social__link">
-                            <img src="#" alt="" class="social__img">VK
+                            <img src="#" alt="VK" class="social__img">VK
                         </a>
                     </li>
                     <li class="socials__item">
                         <a href="#" class="social__link">
-                            <img src="#" alt="" class="social__img">Facebook
+                            <img src="#" alt="Facebook" class="social__img">Facebook
                         </a>
                     </li>
                     <li class="socials__item">
                         <a href="#" class="social__link">
-                            <img src="#" alt="" class="social__img">Twitter
+                            <img src="#" alt="Twitter" class="social__img">Twitter
                         </a>
                     </li>
                     <li class="socials__item">
                         <a href="#" class="social__link">
-                            <img src="#" alt="" class="social__img">Mail
+                            <img src="#" alt="Mail" class="social__img">Mail
                         </a>
                     </li>
                 </ul>
