--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <div class="wrapper">
 
         <header class="header">
-            <img src="" alt="" class="">
             <div class="container">
                 <div class="header__top">
                     <div class="logo">
@@ -28,6 +27,9 @@
         </header>
 
         <main class="main-content">
+            <div class="main-top">
+                <img src="" alt="" class="main-top__img">
+            </div>
             <div class="container">
                 <nav class="sidebar-nav">
                     <ul class="nav__list">
@@ -44,11 +46,13 @@
                 </nav>
     
                 <div class="page-content">
-    
                     <section class="features">
                         <h2 class="section-title">Особенности</h2>
                         <ul class="features__list">
                             <li class="features__item">
+                                <div class="features__item__icon">
+                                    <img src="" alt="" class="features__item__icon-img">
+                                </div>
                                 <h3 class="features__item-title">Уникальность</h3>
                                 <div class="features__item__description">
                                     <p class="features__item__description-text">
@@ -62,6 +66,9 @@
                                 </div>
                             </li>
                             <li class="features__item">
+                                <div class="features__item__icon">
+                                    <img src="" alt="" class="features__item__icon-img">
+                                </div>
                                 <h3 class="features__item-title">Премиум-класс</h3>
                                 <div class="features__item__description">
                                     <p class="features__item__description-text">
@@ -75,6 +82,9 @@
                                 </div>
                             </li>
                             <li class="features__item">
+                                <div class="features__item__icon">
+                                    <img src="" alt="" class="features__item__icon-img">
+                                </div>
                                 <h3 class="features__item-title">Лакшери-стулья</h3>
                                 <div class="features__item__description">
                                     <p class="features__item__description-text">
