--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Coworking</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:300,400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="wrapper">
 
         <header class="header">
-            <div class="container">
-                <div class="header__top">
+            <div class="container clearfix">
                     <div class="logo">
                         <a href="#" class="logo__link">
-                            <img src="" alt="coworking_logo" class="logo__img">
+                            <img src="img/logo.png" width="99" height="51" alt="coworking_logo" class="logo__img">
                         </a>
                     </div>
                     <div class="contacts">
@@ -22,7 +23,6 @@
                             График работы
                         </div>
                     </div>
-                </div>
             </div>
         </header>
 
