--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Coworking</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:300,400,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -48,52 +50,52 @@
                 <div class="page-content">
                     <section class="features">
                         <h2 class="section-title">Особенности</h2>
-                        <ul class="features__list">
-                            <li class="features__item">
-                                <div class="features__item__icon">
-                                    <img src="" alt="" class="features__item__icon-img">
+                        <ul class="features-list">
+                            <li class="features-item">
+                                <div class="features-item__icon">
+                                    <img src="" alt="" class="features-item__icon-img">
                                 </div>
-                                <h3 class="features__item-title">Уникальность</h3>
-                                <div class="features__item__description">
-                                    <p class="features__item__description-text">
+                                <h3 class="features-item__title">Уникальность</h3>
+                                <div class="feature-description">
+                                    <p class="feature-description__text">
                                         Создан для вашего комфортного отдыха
                                     </p>
-                                    <ul class="features__item__description-list">
-                                        <li class="features__item__description-item">Кофе/чай</li>
-                                        <li class="features__item__description-item">Шкаф (5 кг)</li>
-                                        <li class="features__item__description-item">Рабочее место</li>
+                                    <ul class="feature-description__list">
+                                        <li class="feature-description__item">Кофе/чай</li>
+                                        <li class="feature-description__item">Шкаф (5 кг)</li>
+                                        <li class="feature-description__item">Рабочее место</li>
                                     </ul>
                                 </div>
                             </li>
-                            <li class="features__item">
-                                <div class="features__item__icon">
-                                    <img src="" alt="" class="features__item__icon-img">
+                            <li class="features-item">
+                                <div class="features-item__icon">
+                                    <img src="" alt="" class="features-item__icon-img">
                                 </div>
-                                <h3 class="features__item-title">Премиум-класс</h3>
-                                <div class="features__item__description">
-                                    <p class="features__item__description-text">
+                                <h3 class="features-item__title">Премиум-класс</h3>
+                                <div class="feature-description">
+                                    <p class="feature-description__text">
                                         Для любителей хороших впечатлений
                                     </p>
-                                    <ul class="features__item__description-list">
-                                        <li class="features__item__description-item">Обед+кофе</li>
-                                        <li class="features__item__description-item">Шкаф (10 кг)</li>
-                                        <li class="features__item__description-item">Детское кресло</li>
+                                    <ul class="feature-description__list">
+                                        <li class="feature-description__item">Обед+кофе</li>
+                                        <li class="feature-description__item">Шкаф (10 кг)</li>
+                                        <li class="feature-description__item">Детское кресло</li>
                                     </ul>
                                 </div>
                             </li>
-                            <li class="features__item">
-                                <div class="features__item__icon">
-                                    <img src="" alt="" class="features__item__icon-img">
+                            <li class="features-item">
+                                <div class="features-item__icon">
+                                    <img src="" alt="" class="features-item__icon-img">
                                 </div>
-                                <h3 class="features__item-title">Лакшери-стулья</h3>
-                                <div class="features__item__description">
-                                    <p class="features__item__description-text">
+                                <h3 class="features-item__title">Лакшери-стулья</h3>
+                                <div class="feature-description">
+                                    <p class="feature-description__text">
                                         Всё самое лучшее и незабываемое
                                     </p>
-                                    <ul class="features__item__description-list">
-                                        <li class="features__item__description-item">Джакузи</li>
-                                        <li class="features__item__description-item">Шкаф (15 кг)</li>
-                                        <li class="features__item__description-item">Табуретка</li>
+                                    <ul class="feature-description__list">
+                                        <li class="feature-description__item">Джакузи</li>
+                                        <li class="feature-description__item">Шкаф (15 кг)</li>
+                                        <li class="feature-description__item">Табуретка</li>
                                     </ul>
                                 </div>
                             </li>
@@ -102,8 +104,8 @@
     
                     <section class="news">
                         <h2 class="section-title">Последние новости</h2>
-                        <ul class="news__list">
-                            <li class="news__item">
+                        <ul class="news-list">
+                            <li class="news-item">
                                 <div class="news__avatar">
                                     <img src="" alt="" class="news__avatar-img">
                                 </div>
@@ -187,7 +189,7 @@
                         <img src="" alt="coworking_logo" class="logo__img">
                     </a>
                 </div>
-                <div class="footer-socials">
+                <div class="socials">
                     <span class="socials__title">Наши социальные сети</span>
                     <ul class="socials__list">
                         <li class="socials__item">
