main section stylization

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="container clearfix">
                     <div class="logo">
                         <a href="#" class="logo__link">
-                            <img src="img/logo.png" width="99" height="51" alt="coworking_logo" class="logo__img">
+                            <img src="img/logo.png" width="99" height="51" alt="Логотип" class="logo__img">
                         </a>
                     </div>
                     <div class="contacts">
@@ -30,7 +30,7 @@
 
         <main class="main-content">
             <div class="main-top">
-                <img src="" alt="" class="main-top__img">
+                <img src="/img/main-banner.jpg" width="1100" alt="Баннер" class="main-top__img">
             </div>
             <div class="container">
                 <nav class="sidebar-nav">
