features section stylization

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <main class="main-content">
             <div class="main-top">
-                <img src="/img/main-banner.jpg" width="1100" alt="Баннер" class="main-top__img">
+                <img src="img/main-banner.jpg" width="1100" alt="Баннер" class="main-top__img">
             </div>
             <div class="container">
                 <nav class="sidebar-nav">
@@ -53,7 +53,7 @@
                         <ul class="features-list">
                             <li class="features-item">
                                 <div class="features-item__icon">
-                                    <img src="" alt="" class="features-item__icon-img">
+                                    <img src="img/feature-flower.png" alt="Цветок" width="27" height="31" class="features-item__icon-img">
                                 </div>
                                 <h3 class="features-item__title">Уникальность</h3>
                                 <div class="feature-description">
@@ -69,7 +69,7 @@
                             </li>
                             <li class="features-item">
                                 <div class="features-item__icon">
-                                    <img src="" alt="" class="features-item__icon-img">
+                                    <img src="img/feature-star.png" alt="Звезда" width="32" height="32" class="features-item__icon-img">
                                 </div>
                                 <h3 class="features-item__title">Премиум-класс</h3>
                                 <div class="feature-description">
@@ -85,7 +85,7 @@
                             </li>
                             <li class="features-item">
                                 <div class="features-item__icon">
-                                    <img src="" alt="" class="features-item__icon-img">
+                                    <img src="img/feature-palette.png" alt="Палетка" width="28" height="29" class="features-item__icon-img">
                                 </div>
                                 <h3 class="features-item__title">Лакшери-стулья</h3>
                                 <div class="feature-description">
