news section stylization

--- a/index.html
+++ b/index.html
@@ -107,36 +107,42 @@
                         <ul class="news-list">
                             <li class="news-item">
                                 <div class="news__avatar">
-                                    <img src="" alt="" class="news__avatar-img">
+                                    <div class="news__avatar-frame">
+                                        <img src="img/news1.jpg" alt="Чёрная дыра">
+                                    </div>
                                 </div>
                                 <div class="news__content">
-                                    <time class="news__date">12.10.2016</time>
-                                    <h3 class="news__title">Чёрная дыра скидок!</h3>
-                                    <p class="news__text">
+                                    <time>12.10.2016</time>
+                                    <h3>Чёрная дыра скидок!</h3>
+                                    <p>
                                         Ключевым технологическим партнером GrowUp является дата-центр Миран, расположенный всего лишь в 500 метрах от здания, а значит, скорость интернета будет стабильной в любое время суток. Коворкинг работает в формате 24/7. Используйте шкаф для хранения личных вещей. 
                                     </p>
                                 </div>
                             </li>
-                            <li class="news__item">
+                            <li class="news-item">
                                 <div class="news__avatar">
-                                    <img src="" alt="" class="news__avatar-img">
+                                    <div class="news__avatar-frame">
+                                        <img src="img/news2.jpg" alt="Заражай друзей">
+                                    </div>
                                 </div>
                                 <div class="news__content">
-                                    <time class="news__date">01.02.2016</time>
-                                    <h3 class="news__title">Заражай друзей, получай призы!</h3>
-                                    <p class="news__text">
+                                    <time>01.02.2016</time>
+                                    <h3>Заражай друзей, получай призы!</h3>
+                                    <p>
                                         Быть частью сообщества сильных, грамотных и увлеченных своим делом профессионалов - вдохновляет выходить на новые уровни развития. Регулярно в коворкинге проводятся лекции, мастер-классы, встречи с инвесторами или менторами для резидентов.  
                                     </p>
                                 </div>
                             </li>
-                            <li class="news__item">
+                            <li class="news-item">
                                 <div class="news__avatar">
-                                    <img src="" alt="" class="news__avatar-img">
+                                    <div class="news__avatar-frame">
+                                        <img src="img/news3.jpg" alt="Рабочее место">
+                                    </div>
                                 </div>
                                 <div class="news__content">
-                                    <time class="news__date">22.12.2015</time>
-                                    <h3 class="news__title">Новое рабочее место для бизнесменов.</h3>
-                                    <p class="news__text">
+                                    <time>22.12.2015</time>
+                                    <h3>Новое рабочее место для бизнесменов.</h3>
+                                    <p>
                                         Для резидентов коворкинга оборудована не только рабочая зона, но и зона отдыха. Она включает в себя: кухонную зону и зону релакса. Каждый резидент может беспрепятственно пользоваться кухонным оборудованием: микроволновкой, чайником, кофе машиной, посудой. 
                                     </p>
                                 </div>
