--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
                                     <time>01.02.2016</time>
                                     <h3>Заражай друзей, получай призы!</h3>
                                     <p>
-                                        Быть частью сообщества сильных, грамотных и увлеченных своим делом профессионалов - вдохновляет выходить на новые уровни развития. Регулярно в коворкинге проводятся лекции, мастер-классы, встречи с инвесторами или менторами для резидентов.  
+                                        Быть частью сообщества сильных, грамотных и увлеченных своим делом профессионалов - вдохновляет выходить на новые уровни развития.<br>
+                                        Регулярно в коворкинге проводятся лекции, мастер-классы, встречи с инвесторами или менторами для резидентов.  
                                     </p>
                                 </div>
                             </li>
@@ -143,7 +144,8 @@
                                     <time>22.12.2015</time>
                                     <h3>Новое рабочее место для бизнесменов.</h3>
                                     <p>
-                                        Для резидентов коворкинга оборудована не только рабочая зона, но и зона отдыха. Она включает в себя: кухонную зону и зону релакса. Каждый резидент может беспрепятственно пользоваться кухонным оборудованием: микроволновкой, чайником, кофе машиной, посудой. 
+                                        Для резидентов коворкинга оборудована не только рабочая зона, но и зона отдыха. Она включает в себя: кухонную зону и зону релакса.<br> 
+                                        Каждый резидент может беспрепятственно пользоваться кухонным оборудованием: микроволновкой, чайником, кофе машиной, посудой. 
                                     </p>
                                 </div>
                             </li>
@@ -151,10 +153,10 @@
                         <div class="pagination">
                             <span class="pagination__display">Страница 1 из 7</span>
                             <div class="pagination__controlls">
-                                <a href="#" class="pagination__left"><</a>
+                                <a href="#" class="pagination__left pagination__left--disabled"><</a>
                                 <ul class="pagination__list">
                                     <li class="pagination__item">
-                                        <a href="#" class="pagination__link">1</a>
+                                        <a href="#" class="pagination__link pagination__link--active">1</a>
                                     </li>
                                     <li class="pagination__item">
                                         <a href="#" class="pagination__link">2</a>
