--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <header class="header">
             <div class="container clearfix">
-                    <div class="logo">
+                    <div class="logo logo__header">
                         <a href="#" class="logo__link">
                             <img src="img/logo.png" width="99" height="51" alt="Логотип" class="logo__img">
                         </a>
@@ -187,37 +187,37 @@
 
         <footer class="footer">
             <div class="container">
-                <p class="copyright">Сделано с любовью и старанием
+                <p class="copyright">Сделано с любовью и старанием<br>
                     на курсе «HTML + CSS» в 
-                    <a class="copyright__link">LoftSchool</a>.
-                    Автор работы: Прохладов Вадим
+                    <strong><a href="#" class="copyright__link">LoftSchool</a></strong>.
+                    Автор работы: <strong>Прохладов Вадим</strong>
                 </p>
-                <div class="logo">
+                <div class="logo logo_footer">
                     <a href="#" class="logo__link">
-                        <img src="" alt="coworking_logo" class="logo__img">
+                        <img src="img/logo.png" width="99" height="51" alt="Логотип" width="99" height="51" alt="Логотип" class="logo__img">
                     </a>
                 </div>
                 <div class="socials">
                     <span class="socials__title">Наши социальные сети</span>
                     <ul class="socials__list">
                         <li class="socials__item">
-                            <a href="#" class="social__link">
-                                <img src="#" alt="VK" class="social__img">VK
+                            <a href="#" class="social__link social__link--active">
+                                <img src="img/vk.png" width="12" height="7" alt="VK" class="social__img">
                             </a>
                         </li>
                         <li class="socials__item">
                             <a href="#" class="social__link">
-                                <img src="#" alt="Facebook" class="social__img">Facebook
+                                <img src="img/fb.png" alt="Facebook" width="6" height="13" class="social__img">
                             </a>
                         </li>
                         <li class="socials__item">
                             <a href="#" class="social__link">
-                                <img src="#" alt="Twitter" class="social__img">Twitter
+                                <img src="img/twitter.png" alt="Twitter" width="11" height="9" class="social__img">
                             </a>
                         </li>
                         <li class="socials__item">
                             <a href="#" class="social__link">
-                                <img src="#" alt="Mail" class="social__img">Mail
+                                <img src="img/mail.png" alt="Mail" width="12" height="9" class="social__img">
                             </a>
                         </li>
                     </ul>
