nav stylization, hover

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
             <div class="container">
                 <nav class="sidebar-nav">
                     <ul class="nav__list">
-                        <li class="nav__item">
-                            <a href="#" class="nav__link">Главная</a>
+                        <li class="nav__item nav__item--icon--main nav__item--active">
+                            <a href="#" class="nav__link"><span>Главная</span></a>
                         </li>
-                        <li class="nav__item">
-                            <a href="#" class="nav__link">Отзывы</a>
+                        <li class="nav__item nav__item--icon--star">
+                            <a href="#" class="nav__link"><span>Отзывы</span></a>
                         </li>
-                        <li class="nav__item">
-                            <a href="#" class="nav__link">Тарифы</a>
+                        <li class="nav__item nav__item--icon--wallet">
+                            <a href="#" class="nav__link"><span>Тарифы</span></a>
                         </li>
                     </ul>
                 </nav>
@@ -201,7 +201,7 @@
                     <span class="socials__title">Наши социальные сети</span>
                     <ul class="socials__list">
                         <li class="socials__item">
-                            <a href="#" class="social__link social__link--active">
+                            <a href="#" class="social__link">
                                 <img src="img/vk.png" width="12" height="7" alt="VK" class="social__img">
                             </a>
                         </li>
